# Online_Store

./: data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_category_created_at.py  0004_remove_category_created_at_alter_product_preview.py
catalog/templates/catalog/: base.html  home.html
catalog/templatetags/: filters.py
config/: settings.py  urls.py
