[tool.poetry]
name = "online_store"
version = "0.1.0"
description = ""
authors = ["Artem Osipov <tema.osipov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
psycopg2-binary = "^2.9.7"
Pillow = "^10.0.1"
ipython = "^8.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
